xsd documentation - text output